# TBAM

./: .gitignore  README.md  pyproject.toml
docs/: tbam-interface-demo.tape
tbam/: __init__.py  __main__.py  app.py  bam_utils.py  cli.py  demo_data.py
